// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POS Authorize should return error if createTerminalPayment fails 1`] = `
Object {
  "authorized": false,
  "error": true,
  "fieldErrors": Array [],
  "serverErrors": Array [
    "mocked_error.payment.processor.not.supported",
  ],
}
`;

exports[`POS Authorize should return error if createTerminalPayment fails 2`] = `
Array [
  Array [
    "POS Authorise error, result: mockedResponse",
  ],
]
`;

exports[`POS Authorize should return error if there is no terminal ID 1`] = `
Object {
  "authorized": false,
  "error": true,
  "fieldErrors": Array [],
  "serverErrors": Array [
    "mocked_error.payment.processor.not.supported",
  ],
}
`;

exports[`POS Authorize should return error if there is no terminal ID 2`] = `
Array [
  Array [
    "No terminal selected",
  ],
]
`;

exports[`POS Authorize should return success response when createTerminalPayment passes 1`] = `
Object {
  "response": "mockedSuccessResponse",
}
`;
